--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ header{
 header div{
     width: 120px;
     margin: auto;
-    /* background-image: linear-gradient(180deg,#690064 0%,#b0cc13 100%); */
-    background-color: white;
+    background-image: linear-gradient(120deg, #ff00f2 0%,rgb(0, 255, 55) 100%);
+    /* background-color: white; */
+    box-shadow: 1px 1px 10px 1px rgba(255, 255, 255, 0.308);
     border-radius: 50%;
     display: flex;
     padding: 4px;
@@ -53,8 +54,8 @@ main{
 
 section{
     color: white;
-    /* background-image: linear-gradient(90deg, #690064 0%,#b0cc13 100%); */
-    background-color: white;
+    background-image: linear-gradient(90deg, #ff00f2 0%,rgb(0, 255, 55) 100%);
+    /* background-color: rgba(0, 255, 55, 0.308); */
 
     padding-top: 4px;
     border-radius: 10px;
